<resources>
    <string name="app_name">TourHelper</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="newuser">新用户</string>
    <string name="login">快速登录</string>
    <string name="trial">游客使用</string>
    <string name="register">注  册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shouye">首页</string>
    <string name="local">附近</string>
    <string name="service">服务</string>
    <string name="my">我的</string>

    <string name="tv_home">首页</string>
    <string name="tv_setting">设置</string>
    <string name="tv_theme">主题</string>
    <string name="tv_scans">安装包管理</string>
    <string name="tv_feedback">反馈</string>
    <string name="tv_updates">检查更新</string>
    <string name="tv_about">关于</string>
    <string name="tv_exit">退出</string>
    <string name="tv_user_name">未知</string>
    <string name="tv_user_email">unknown@gmail.com</string>
    <string name="about">本功划得来不is大红包速率GV比 点击搜安丢 打死哦 哈大家 奇偶ID骄傲搜if和UI噢if酒叟返回我欧豪分红is啊很巨石山 是个好地方，123124实打实福建省我基 本功划得来不is大红包速率GV比 点击搜安丢 打死哦 哈大家 奇偶ID骄傲搜if和UI噢if酒叟返回我欧豪分红is啊很巨石山 是个好地方，123124实打实福建省我基 本功划得来不is大红包速率GV比 点击搜安丢 打死哦 哈大家 奇偶ID骄傲搜if和UI噢if酒叟返回我欧豪分红is啊很巨石山 是个好地方，123124实打实福建省我基 本功划得来不is大红包速率GV比 点击搜安丢 打死哦 哈大家 奇偶ID骄傲搜if和UI噢if酒叟返回我欧豪分红is啊很巨 石山是个好地方，123124实打实福建省我基 本功划得来不is大红包速率GV比 点击搜安丢 打死哦 哈大家 奇偶ID骄傲搜if和UI噢if酒叟返回我欧豪分红is啊很 巨石山是个好地方，123124实打实福建省我基 本功划得来不is大红包速率GV比 点击搜安丢 打死哦 哈大家 奇偶ID骄傲搜if和UI噢if酒叟返回我欧豪分红is啊很巨 石山是个好地方，123124实打实福建省我基 本功划得来不is大红包速率GV比 点击搜安丢 打死哦</string>
</resources>
